FlatCacheGenerator/FlatBuffersParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FlatBuffers.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class FlatBuffersParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, BooleanConstant=45, 
		Ident=46, IntegerConstant=47, FloatConstant=48, StringConstant=49, WS=50;
	public const int
		RULE_schema = 0, RULE_include = 1, RULE_namespace_decl = 2, RULE_attribute_decl = 3, 
		RULE_type_decl = 4, RULE_enum_decl = 5, RULE_root_decl = 6, RULE_field_decl = 7, 
		RULE_rpc_decl = 8, RULE_rpc_method = 9, RULE_type_ = 10, RULE_enumval_decl = 11, 
		RULE_metadata = 12, RULE_scalar = 13, RULE_object = 14, RULE_single_value = 15, 
		RULE_value = 16, RULE_file_extension_decl = 17, RULE_file_identifier_decl = 18, 
		RULE_commasep_enumval_decl = 19, RULE_commasep_metadata_item = 20, RULE_commasep_object_item = 21, 
		RULE_commasep_value = 22;
	public static readonly string[] ruleNames = {
		"schema", "include", "namespace_decl", "attribute_decl", "type_decl", 
		"enum_decl", "root_decl", "field_decl", "rpc_decl", "rpc_method", "type_", 
		"enumval_decl", "metadata", "scalar", "object", "single_value", "value", 
		"file_extension_decl", "file_identifier_decl", "commasep_enumval_decl", 
		"commasep_metadata_item", "commasep_object_item", "commasep_value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'include'", "';'", "'namespace'", "'.'", "'attribute'", "'table'", 
		"'struct'", "'{'", "'}'", "'enum'", "':'", "'union'", "'root_type'", "'='", 
		"'rpc_service'", "'('", "')'", "'bool'", "'byte'", "'ubyte'", "'short'", 
		"'ushort'", "'int'", "'uint'", "'float'", "'long'", "'ulong'", "'double'", 
		"'int8'", "'uint8'", "'int16'", "'uint16'", "'int32'", "'uint32'", "'int64'", 
		"'uint64'", "'float32'", "'float64'", "'string'", "'['", "']'", "'file_extension'", 
		"'file_identifier'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "BooleanConstant", 
		"Ident", "IntegerConstant", "FloatConstant", "StringConstant", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FlatBuffers.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FlatBuffersParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FlatBuffersParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FlatBuffersParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SchemaContext : ParserRuleContext {
		public FlatCacheGenerator.FlatBufferTree output;
		public IncludeContext includeOne;
		public Namespace_declContext namespaceOne;
		public Type_declContext typeOne;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FlatBuffersParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Enum_declContext[] enum_decl() {
			return GetRuleContexts<Enum_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_declContext enum_decl(int i) {
			return GetRuleContext<Enum_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Root_declContext[] root_decl() {
			return GetRuleContexts<Root_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Root_declContext root_decl(int i) {
			return GetRuleContext<Root_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_extension_declContext[] file_extension_decl() {
			return GetRuleContexts<File_extension_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_extension_declContext file_extension_decl(int i) {
			return GetRuleContext<File_extension_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_identifier_declContext[] file_identifier_decl() {
			return GetRuleContexts<File_identifier_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_identifier_declContext file_identifier_decl(int i) {
			return GetRuleContext<File_identifier_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attribute_declContext[] attribute_decl() {
			return GetRuleContexts<Attribute_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attribute_declContext attribute_decl(int i) {
			return GetRuleContext<Attribute_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rpc_declContext[] rpc_decl() {
			return GetRuleContexts<Rpc_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rpc_declContext rpc_decl(int i) {
			return GetRuleContext<Rpc_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectContext[] @object() {
			return GetRuleContexts<ObjectContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectContext @object(int i) {
			return GetRuleContext<ObjectContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludeContext[] include() {
			return GetRuleContexts<IncludeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncludeContext include(int i) {
			return GetRuleContext<IncludeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Namespace_declContext[] namespace_decl() {
			return GetRuleContexts<Namespace_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Namespace_declContext namespace_decl(int i) {
			return GetRuleContext<Namespace_declContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_declContext[] type_decl() {
			return GetRuleContexts<Type_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_declContext type_decl(int i) {
			return GetRuleContext<Type_declContext>(i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_schema; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterSchema(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitSchema(this);
		}
	}

	[RuleVersion(0)]
	public SchemaContext schema() {
		SchemaContext _localctx = new SchemaContext(Context, State);
		EnterRule(_localctx, 0, RULE_schema);
		 _localctx.output =  new FlatCacheGenerator.FlatBufferTree(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 46;
				_localctx.includeOne = include();
				 _localctx.output.m_includes.Add(_localctx.includeOne.output); 
				}
				}
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 13194139579880L) != 0)) {
				{
				State = 67;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__2:
					{
					State = 54;
					_localctx.namespaceOne = namespace_decl();
					 _localctx.output.m_namespaces.AddRange(_localctx.namespaceOne.output); 
					}
					break;
				case T__5:
				case T__6:
					{
					State = 57;
					_localctx.typeOne = type_decl();
					 _localctx.output.m_types.Add(_localctx.typeOne.output); 
					}
					break;
				case T__9:
				case T__11:
					{
					State = 60;
					enum_decl();
					}
					break;
				case T__12:
					{
					State = 61;
					root_decl();
					}
					break;
				case T__41:
					{
					State = 62;
					file_extension_decl();
					}
					break;
				case T__42:
					{
					State = 63;
					file_identifier_decl();
					}
					break;
				case T__4:
					{
					State = 64;
					attribute_decl();
					}
					break;
				case T__14:
					{
					State = 65;
					rpc_decl();
					}
					break;
				case T__7:
					{
					State = 66;
					@object();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 72;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeContext : ParserRuleContext {
		public string output;
		public IToken stringConstantOne;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringConstant() { return GetToken(FlatBuffersParser.StringConstant, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_include; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterInclude(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitInclude(this);
		}
	}

	[RuleVersion(0)]
	public IncludeContext include() {
		IncludeContext _localctx = new IncludeContext(Context, State);
		EnterRule(_localctx, 2, RULE_include);
		 _localctx.output =  ""; 
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(T__0);
			State = 75;
			_localctx.stringConstantOne = Match(StringConstant);
			 _localctx.output += (_localctx.stringConstantOne!=null?_localctx.stringConstantOne.Text:null); 
			State = 77;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespace_declContext : ParserRuleContext {
		public List<string> output;
		public IToken identFirst;
		public IToken identLeft;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Ident() { return GetTokens(FlatBuffersParser.Ident); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident(int i) {
			return GetToken(FlatBuffersParser.Ident, i);
		}
		public Namespace_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterNamespace_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitNamespace_decl(this);
		}
	}

	[RuleVersion(0)]
	public Namespace_declContext namespace_decl() {
		Namespace_declContext _localctx = new Namespace_declContext(Context, State);
		EnterRule(_localctx, 4, RULE_namespace_decl);
		 _localctx.output =  new List<string>(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			Match(T__2);
			State = 80;
			_localctx.identFirst = Match(Ident);
			 _localctx.output.Add((_localctx.identFirst!=null?_localctx.identFirst.Text:null)); 
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3) {
				{
				{
				State = 82;
				Match(T__3);
				State = 83;
				_localctx.identLeft = Match(Ident);
				 _localctx.output.Add((_localctx.identLeft!=null?_localctx.identLeft.Text:null)); 
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Attribute_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringConstant() { return GetToken(FlatBuffersParser.StringConstant, 0); }
		public Attribute_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attribute_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterAttribute_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitAttribute_decl(this);
		}
	}

	[RuleVersion(0)]
	public Attribute_declContext attribute_decl() {
		Attribute_declContext _localctx = new Attribute_declContext(Context, State);
		EnterRule(_localctx, 6, RULE_attribute_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(T__4);
			State = 93;
			_la = TokenStream.LA(1);
			if ( !(_la==Ident || _la==StringConstant) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 94;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_declContext : ParserRuleContext {
		public FlatCacheGenerator.FlatBufferType output;
		public IToken identOne;
		public Field_declContext fieldOne;
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Field_declContext[] field_decl() {
			return GetRuleContexts<Field_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Field_declContext field_decl(int i) {
			return GetRuleContext<Field_declContext>(i);
		}
		public Type_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterType_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitType_decl(this);
		}
	}

	[RuleVersion(0)]
	public Type_declContext type_decl() {
		Type_declContext _localctx = new Type_declContext(Context, State);
		EnterRule(_localctx, 8, RULE_type_decl);
		 _localctx.output =  new FlatCacheGenerator.FlatBufferType(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__5:
				{
				State = 96;
				Match(T__5);
				 _localctx.output.m_kind = FlatCacheGenerator.TypeKind.Table; 
				}
				break;
			case T__6:
				{
				State = 98;
				Match(T__6);
				 _localctx.output.m_kind = FlatCacheGenerator.TypeKind.Struct; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 102;
			_localctx.identOne = Match(Ident);
			  _localctx.output.m_name = (_localctx.identOne!=null?_localctx.identOne.Text:null); 
			State = 104;
			metadata();
			State = 105;
			Match(T__7);
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 106;
				_localctx.fieldOne = field_decl();
				 _localctx.output.m_fields.Add(_localctx.fieldOne.output); 
				}
				}
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Ident );
			State = 113;
			Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Enum_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Commasep_enumval_declContext commasep_enumval_decl() {
			return GetRuleContext<Commasep_enumval_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_Context type_() {
			return GetRuleContext<Type_Context>(0);
		}
		public Enum_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enum_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterEnum_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitEnum_decl(this);
		}
	}

	[RuleVersion(0)]
	public Enum_declContext enum_decl() {
		Enum_declContext _localctx = new Enum_declContext(Context, State);
		EnterRule(_localctx, 10, RULE_enum_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__9:
				{
				State = 115;
				Match(T__9);
				State = 116;
				Match(Ident);
				State = 117;
				Match(T__10);
				State = 118;
				type_();
				}
				break;
			case T__11:
				{
				State = 119;
				Match(T__11);
				State = 120;
				Match(Ident);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 123;
			metadata();
			State = 124;
			Match(T__7);
			State = 125;
			commasep_enumval_decl();
			State = 126;
			Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Root_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		public Root_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterRoot_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitRoot_decl(this);
		}
	}

	[RuleVersion(0)]
	public Root_declContext root_decl() {
		Root_declContext _localctx = new Root_declContext(Context, State);
		EnterRule(_localctx, 12, RULE_root_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			Match(T__12);
			State = 129;
			Match(Ident);
			State = 130;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Field_declContext : ParserRuleContext {
		public FlatCacheGenerator.FlatBufferField output;
		public IToken identOne;
		public Type_Context typeOne;
		public ScalarContext scalarOne;
		[System.Diagnostics.DebuggerNonUserCode] public MetadataContext metadata() {
			return GetRuleContext<MetadataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_Context type_() {
			return GetRuleContext<Type_Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ScalarContext scalar() {
			return GetRuleContext<ScalarContext>(0);
		}
		public Field_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterField_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitField_decl(this);
		}
	}

	[RuleVersion(0)]
	public Field_declContext field_decl() {
		Field_declContext _localctx = new Field_declContext(Context, State);
		EnterRule(_localctx, 14, RULE_field_decl);
		 _localctx.output =  new FlatCacheGenerator.FlatBufferField(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			_localctx.identOne = Match(Ident);
			 _localctx.output.m_name = (_localctx.identOne!=null?_localctx.identOne.Text:null); 
			State = 134;
			Match(T__10);
			State = 135;
			_localctx.typeOne = type_();
			 _localctx.output.m_type = (_localctx.typeOne!=null?TokenStream.GetText(_localctx.typeOne.Start,_localctx.typeOne.Stop):null); 
			State = 141;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__13) {
				{
				State = 137;
				Match(T__13);
				State = 138;
				_localctx.scalarOne = scalar();
				 _localctx.output.m_defaultValue = (_localctx.scalarOne!=null?TokenStream.GetText(_localctx.scalarOne.Start,_localctx.scalarOne.Stop):null); 
				}
			}

			State = 143;
			metadata();
			State = 144;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rpc_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Ident() { return GetToken(FlatBuffersParser.Ident, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Rpc_methodContext[] rpc_method() {
			return GetRuleContexts<Rpc_methodContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rpc_methodContext rpc_method(int i) {
			return GetRuleContext<Rpc_methodContext>(i);
		}
		public Rpc_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rpc_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.EnterRpc_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlatBuffersListener typedListener = listener as IFlatBuffersListener;
			if (typedListener != null) typedListener.ExitRpc_decl(this);
		}
	}

	[RuleVersion(0)]
	public Rpc_declContext rpc_decl() {
		Rpc_declContext _localctx = new Rpc_declContext(Context, State);
		EnterRule(_localctx, 16, RULE_rpc_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146;
			Match(T__14);
			State = 147;
			Match(Ident);
			State = 148;
			Match(T__7);
			State = 150;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 149;
				rpc_method();
				}
				}
				State = 152;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Ident );
			State = 154;
			Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
